Fixed overflow on mobile

--- a/Css/googleStyles.css
+++ b/Css/googleStyles.css
@@ -4,6 +4,7 @@
     margin:0;
     font-family: Roboto,HelveticaNeue,Arial,sans-serif;
     height:100%;
+    overflow: hidden;
 
 }
 a{
